# Aquarium-Controller

./: .gitignore  GitCleanupCommands.txt  README.md
AquariumControllerClient/: -destination  .gitignore  AquariumControllerClient.xctestplan  AquariumControllerClientApp.swift  acct.txt
AquariumControllerClient/AquariumControllerClient/: Alarm.swift  AlarmEditView.swift  AlarmView.swift  AqController.swift  AqControllerMessage.swift  AquariumControllerClient.entitlements  AquariumControllerClientDebug.entitlements  ContentView.swift  ControlCenterView.swift  ControllerState.swift  CurrentState.swift  DatePickerView.swift  DetailedTaskView.swift  Device.swift  DeviceView.swift  GeneralSetting.swift  GeneralSettingEditView.swift  GeneralSettingView.swift  HashableClass.swift  HomeView.swift  Info.plist  LocationModel.swift  MultiComponentPicker.swift  MyEnvironment.swift  Network.swift  ParametersView.swift  Sensor.swift  SensorView.swift  SettingsState.swift  SettingsTaskView.swift  SettingsView.swift  Task.swift  TaskDetailedView.swift  TaskSummaryView.swift  ThermostatDetailedView.swift  WebSocketMessage.swift  connectedTaskSummaryView.swift
AquariumControllerClient/AquariumControllerClient.xcodeproj/: project.pbxproj
AquariumControllerESP32/: .gitignore  AquariumController.h  PowerControl.h  TimedPowerEventControl.cpp  TimedPowerEventControl.h  partitions.csv  sdkconfig.defaults  sdkconfig.defaults_Docker_Dev
AquariumControllerESP32/.vscode_Docker_Dev/: settings.json
AquariumControllerESP32/main/: AqController.cpp  AqController.h  AquariumController.h  CMakeLists.txt  Environment.h  cert.h  cert.pem  idf_component.yml  key.h  key.pem  main.cpp
AquariumControllerESP32/main/Peripherals/Device/: Device.cpp  Device.h
AquariumControllerESP32/main/Peripherals/HardwareInterface/: HardwareInterface.cpp  HardwareInterface.h  Switch.cpp  Switch.h
AquariumControllerESP32/main/Peripherals/Sensor/: Sensor.cpp  Sensor.h
AquariumControllerESP32/main/Server/: AqWebServer.cpp  AqWebServer.h  MailClient.cpp  MailClient.h
AquariumControllerESP32/main/Settings/: Alarm.h  Setting.cpp  Setting.h
AquariumControllerESP32/main/Task/: Task.cpp  Task.h
AquariumControllerESPIDF/AquariumController/main/: AqController.cpp  AqController.h  AqWebServer.cpp  AquariumController.h  CMakeLists.txt  Environment.h  HardwareInterface.cpp  MailClient.c  Switch.cpp  Switch.h  Task.cpp  main.cpp
AquariumControllerESPIDF/AquariumController/main/Peripherals/Device/: Device.cpp  Device.h
AquariumControllerESPIDF/AquariumController/main/Peripherals/HardwareInterface/: HardwareInterface.cpp  HardwareInterface.h  Switch.cpp  Switch.h
AquariumControllerESPIDF/AquariumController/main/Peripherals/Sensor/: Sensor.cpp  Sensor.h
AquariumControllerESPIDF/AquariumController/main/Server/: AqWebServer.cpp  AqWebServer.h  AqWebServerInterface.h  AquariumController.code-workspace  MailClient.cpp  MailClient.h
AquariumControllerESPIDF/AquariumController/main/Settings/: Alarm.cpp  Alarm.h  Setting.cpp  Setting.h
AquariumControllerESPIDF/AquariumController/main/Task/: Task.cpp  Task.h
AquariumControllerESPIDF/AquariumController/main/ulp/: adc.S  ulp_config.h
(+85 files in other folders)
